<?xml version="1.0"?>
<package format="2">
  <name>hw1</name>
  <version>0.0.1</version>
  <description>ROB 551 Homework 1</description>

  <maintainer email="smartw@oregonstate.edu">Bill Smart</maintainer>
  <license>BSD 3-Clause</license>

  <author email="smartw@oregonstate.edu">Bill Smart</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
