<?xml version="1.0"?>
<package format="2">
  <name>stage_osu</name>
  <version>0.0.1</version>
  <description>ROB 599 Stage Simulation Package</description>

  <maintainer email="smartw@oregonstate.edu">Bill Smart</maintainer>
  <license>BSD 3-Clause</license>

  <author email="smartw@oregonstate.edu">Bill Smart</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
